# oa

./: .gitattributes  .gitignore  README.md  clear-public.sh  oa.conf
gen-data/: data.json  robots.txt
gen-data/static/: all.css  base.css  creator.css  index.css
gen-data/templates/: all.html  creator.html  error.html  index.html
generator/: Cargo.toml
generator/src/: data.rs  gen_css.rs  gen_html.rs  gen_images.rs  main.rs  utils.rs
log/: reset-logs.sh
