[package]
name = "generator"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "~1.0", features = ["derive"] }
serde_json = "~1.0"
const_format = "0.2.23"
glob = "0.3.0"

# HTML templates
tera = "1.15.0"

# HTML & CSS minification
html-minifier = "3.0.15"

# Images
image = "0.24.2"
mozjpeg = "0.9.2"
rayon = "1.5.3"